syntax = "proto3";
package dh_message;

message GetRequest {
    int32 transaction_id = 1;
	int32 sender_id = 2;
	int32 ttl = 3;
	string key = 4;
}

message GetResponse {
    int32 transaction_id = 1;
    int32 sender_id = 2;
    int32 responder_id = 3;
    uint64 version = 4;
    string value = 5;
}

message SetRequest {
    int32 transaction_id = 1;
    int32 sender_id = 2;
    int32 ttl = 3;
    uint64 version = 4;
    string key = 5;
    string value = 6;
}

message SetResponse {
    int32 transaction_id = 1;
    int32 sender_id = 2;
    int32 responder_id = 3;
    bool success = 4;
    string msg = 5;
}